Hide images from reader if we are going to do a relayout, until we actually do so (it fixes a flicker of images while the transition happens

--- a/public/stylesheets/reader.css
+++ b/public/stylesheets/reader.css
@@ -16,6 +16,10 @@ body {
     text-align: center;
 }
 
+.auto-zoom, .auto-layout {
+    visibility: hidden;
+}
+
 .modal {
     display: none;
     position: absolute;
